res/layout/stylesheet.css
html {
    scroll-behavior: smooth;
}

@font-face {
    font-family: gilroy-bold;
    src: url("../font/Radomir\ Tinkov\ -\ Gilroy-ExtraBold.otf");
}

@font-face {
    font-family: gilroy;
    src: url("../font/Radomir\ Tinkov\ -\ Gilroy-Light.otf");
}

@font-face {
    font-family: now;
    src: url('../font/now-alt/NowAlt-Light.eot');
    src: url('../font/now-alt/NowAlt-Light.eot?#iefix') format('embedded-opentype'), url('../font/now-alt/NowAlt-Light.woff2') format('woff2'), url('../font/now-alt/NowAlt-Light.woff') format('woff'), url('../font/now-alt/NowAlt-Light.ttf') format('truetype'), url('../font/now-alt/NowAlt-Light.svg#NowAlt-Light') format('svg');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

* {
    font-family: now, gilroy, sans-serif;
}

a {
    text-decoration: none;
    color: inherit;
}

html,
body {
    height: 100%;
    width: 100%;
    background-color: rgb(228, 228, 227);
    color: rgb(39, 39, 37);
    background-size: cover;
    position: relative;
    margin: 0px;
    padding: 0px;
    overflow: hidden;
    user-select: none;
}


/*
 Background canvas
 */

#background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


/*
 Header
 */

#header {
    position: absolute;
    bottom: 15%;
    max-width: 75%;
    transition: all 0.3s;
    transition-timing-function: ease-in-out;
}

#header_text {
    max-width: 100%;
    width: min-content;
    overflow-x: hidden;
    transition: all 0.2s;
    transition-timing-function: ease-in-out;
}

#header_text * {
    text-overflow: clip;
    width: max-content;
}

#header ul {
    padding-left: 0px;
    list-style: none;
}

.hook {
    width: min-content;
    height: min-content;
    margin-top: 0.7em;
    margin-bottom: 0.5em;
    opacity: 1;
    transition: all 0.3s;
    transition-timing-function: ease-in;
}

.hook:hover {
    cursor: pointer;
    opacity: 0.6;
}


/*
 Exhibition Slabs
 */

.exhibition {
    background-color: hsla(114, 7.5%, 40%, 0.85);
    color: rgb(221, 221, 221);
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    transition: width 0.3s;
    transition-timing-function: ease-in-out;
    border-top-left-radius: 0.0625in;
    overflow-x: hidden;
    overflow-y: scroll;
}

.exhibition#projects {}

.exhibition#experiments {
    display: inline-flex;
    align-content: center;
    justify-content: flex-end;
    flex-wrap: wrap;
}

.exhibition#blog {}

.exhibition#about {
    display: flex;
    align-items: center;
}

.exhibition#about>div {
    height: fit-content;
}

